# pgmqtt

./: .gitignore  README.md  docker-compose.yml  limitations.md
.github/workflows/: release.yml  test.yml
demos/fleet/: README.md  docker-compose.yml
demos/machinepage/: README.md  docker-compose.yml
demos/observability/: README.md  docker-compose.yml
demos/queue/: README.md  docker-compose.yml
docker/: Dockerfile  Dockerfile.build  Dockerfile.install-test  docker-compose.perf.yml  docker-compose.test.yml
docker/postgres-exporter/: queries.yaml
docker/postgres_exporter/: queries.yaml
docker/prometheus/: prometheus.yml
docs/: configuration.md  enterprise.md  interfaces.md  limitations.md  topic-mapping-migration.md
extension/: Cargo.toml  README.md  pgmqtt.control
extension/src/: ffi_safe.rs  inbound_map.rs  init010.rs  lib.rs  license.rs  metrics.rs  mqtt.rs  ring_buffer.rs  server.rs  subscriptions.rs  topic_buffer.rs  topic_map.rs  websocket.rs
extension/src/server/: db_action.rs  mod.rs  session.rs  transport.rs
scripts/: build_package.sh  run_perf_tests.sh
tests/: __init__.py  conftest.py  repro_duplicate_ids.py  requirements.txt
tests/conformance/: README.md  docker-compose.yml  mosquitto.conf
tests/enterprise/: conftest.py
tests/helpers/: guc.py  jwt.py  license.py  mqtt.py  tls.py
tests/integration/: __init__.py  package.json  proto_utils.py  test_adversarial.py  test_cdc.py  test_cdc_conformance.py  test_cdc_unsubscribe.py  test_concurrency_cdc.py  test_connect.py  test_flow_control.py  test_healthcheck.py  test_inbound_mapping.py  (+34 more)
(+75 files in other folders)
