[package]
name = "pgmqtt"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pgmqtt"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg13"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
pgrx = "=0.16.1"
minijinja = { version = "2", features = ["builtins", "json"] }
base64 = "0.22.1"
sha1 = "0.10.6"
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"

[dev-dependencies]
pgrx-tests = "=0.16.1"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
debug = "line-tables-only"
strip = "none"
